<resources>
    <string name="app_name">BookApp</string>

    <!-- Toolbar titles -->
    <string name="toolbar_title_home">BookApp</string>
    <string name="toolbar_title_categories">Categorias</string>
    <string name="toolbar_title_history">Historial</string>
    <!-- Errors -->
    <string name="dialog_simple_title_error_bookapp">Book App</string>
    <string name="dialog_simple_message_error">Se ha producido un error en el servidor. Por favor, inténtalo de nuevo.</string>
    <string name="dialog_simple_message_error_wrong_credentials">Usuario o contraseña incorrectos.</string>

    <!-- Login -->
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_forget_password">¿Has olvidado tu contraseña?</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="login_register">Crear cuenta</string>

    <!-- Register -->
    <string name="register_title">Registro</string>
    <string name="register_username">Nombre de usuario</string>
    <string name="register_name">Nombre</string>
    <string name="register_surname">Apellidos</string>
    <string name="register_email">Email</string>
    <string name="register_phone">Teléfono</string>
    <string name="register_password">Contraseña</string>
    <string name="register_password_repeat">Repetir contraseña</string>
    <string name="register_button">Crear cuenta</string>

    <!-- Home -->
    <string name="home_categories">Categorias</string>
    <string name="home_favorites">Favoritos</string>
    <string name="home_top_sites">Top Sites</string>
    <string name="home_calendar">Calendario</string>
    <string name="home_history">Historial</string>
    <string name="home_user_name">%s %s</string>
    <string name="home_user_money">%s€</string>

</resources>
