<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <Button
        android:id="@+id/bLoginSignIn"
        style="@style/ButtonSalmon"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="113dp"
        android:text="@string/login_button"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginForgetPassword" />

    <es.babel.easymvvm.android.extra.EmaEditText
        android:id="@+id/etLoginUser"
        style="@style/EditTextWhite"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginUser" />

    <es.babel.easymvvm.android.extra.EmaEditText
        android:id="@+id/etLoginPassword"
        style="@style/EditTextWhite"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginPassword" />

    <TextView
        android:id="@+id/tvLoginUser"
        style="@style/SegoeFontBoldBlack12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:text="@string/login_user"
        app:layout_constraintStart_toStartOf="@+id/etLoginUser"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginPassword"
        style="@style/SegoeFontBoldBlack12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_password"
        app:layout_constraintStart_toStartOf="@+id/tvLoginUser"
        app:layout_constraintTop_toBottomOf="@+id/etLoginUser" />

    <TextView
        style="@style/SegoeFontBoldSalmon12"
        android:id="@+id/tvLoginForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_forget_password"
        android:textColor="@color/darkSalmon"
        app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/etLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="30dp"
        android:background="@color/darkSalmon"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout5"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout4">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="16dp"
        android:background="@color/darkSalmon"
        app:layout_constraintBottom_toTopOf="@+id/bLoginRegister"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="20dp"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/darkSalmon"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout4"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout4">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bLoginRegister"
        style="@style/ButtonSalmon"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="40dp"
        android:text="@string/login_register"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

