<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/shape_salmon_white_border"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout6"
        app:layout_constraintStart_toStartOf="@+id/clHomeCategory"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHomeName"
            style="@style/SegoeFontBoldWhite20"
            android:text="@string/home_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="46dp"
            app:layout_constraintBottom_toTopOf="@+id/tvHomeMoney"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            tools:text="Alvaro Montero" />

        <TextView
            android:id="@+id/tvHomeMoney"
            style="@style/SegoeFontBoldWhite20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvHomeName"
            app:layout_constraintTop_toBottomOf="@+id/tvHomeName"
            tools:text="0.00€" />

        <ImageView
            android:background="@drawable/shape_circle"
            android:id="@+id/imageView6"
            android:layout_width="54dp"
            android:layout_height="54dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvHomeMoney"
            app:layout_constraintEnd_toStartOf="@+id/tvHomeName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvHomeName"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHomeCategory"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/shape_salmon_white_border"
        android:elevation="4dp"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_categories" />

        <TextView
            android:id="@+id/textView3"
            style="@style/SegoeFontBoldWhite20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_categories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:background="@drawable/shape_salmon_white_border"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clHomeCategory"
        app:layout_constraintTop_toTopOf="@+id/clHomeCategory">

        <TextView
            android:id="@+id/textView4"
            style="@style/SegoeFontBoldWhite20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorites" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/shape_salmon_white_border"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="@+id/clHomeCategory"
        app:layout_constraintTop_toBottomOf="@+id/clHomeCategory">

        <TextView
            android:id="@+id/textView5"
            style="@style/SegoeFontBoldWhite20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_top_sites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_top_sites" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHistoryCategory"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/shape_salmon_white_border"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout5"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/textView7"
            style="@style/SegoeFontBoldWhite20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_history" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="145dp"
        android:layout_height="130dp"
        android:background="@drawable/shape_salmon_white_border"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout6"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/textView6"
            style="@style/SegoeFontBoldWhite20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_calendar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

